Add hero-section, bg-blur, socials

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,9 +151,9 @@ img {
     top: -100%;
     right: 0;
     padding-block: 5.5rem 4.5rem;
-    background-color: hsl(23, 12%, 4%);
+    background-color: hsla(23, 12%, 4%, 0.12);
     backdrop-filter: blur(32px);
-    -webkit-backdrop-filter: blur(32px);
+    /* -webkit-backdrop-filter: blur(32px); */
     transition: top 0.4s;
   }
 }
@@ -173,14 +173,14 @@ img {
   color: var(--first-color);
 }
 
-.nav__close{
+.nav__close {
   position: absolute;
   top: 1rem;
   right: 2.5rem;
 }
 
 /* Show menu */
-.show-menu{
+.show-menu {
   top: 0;
 }
 
@@ -189,9 +189,121 @@ img {
 /* Active link */
 
 /*=============== HOME ===============*/
+.hero-section__container {
+  position: relative;
+  padding-block: 7rem 1rem;
+  row-gap: 2.5rem;
+}
 
+.hero-section__content {
+  position: relative;
+  display: grid;
+  justify-self: center;
+}
+
+.hero-section__img {
+  width: 220px;
+  margin-bottom: 1.5rem;
+}
+
+.hero-section__title {
+  font-size: var(--biggest-font-size);
+  color: var(--first-color);
+  display: flex;
+  column-gap: 0.25rem;
+  position: absolute;
+  top: -2rem;
+  justify-self: center;
+}
+.hero-section__title span:nth-child(2) {
+  z-index: -1;
+}
+
+.hero-section__tooltip {
+  position: absolute;
+  top: -0.5rem;
+  right: 1.5rem;
+}
+
+.hero-section__tooltip-img {
+  width: 60px;
+}
+.hero-section__tooltip-text {
+  color: var(--white-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  background: var(--gradient-color);
+  padding: 0.25rem 0.75rem;
+  border-radius: 4rem;
+  position: absolute;
+  transform: translate(60px, -40px);
+  white-space: nowrap;
+}
+
+.hero-section__socials {
+  display: grid;
+  justify-items: center;
+  row-gap: 6rem;
+  position: absolute;
+  top: 2rem;
+  left: -4.5rem;
+}
+
+.hero-section__socials-text {
+  position: relative;
+  rotate: 90deg;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+}
+.hero-section__socials-text::after {
+  content: "";
+  width: 48px;
+  height: 1px;
+  background-color: var(--text-color);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin-block: auto;
+  right: -64px;
+}
+.hero-section__socials-links {
+  display: grid;
+  row-gap: 0.75rem;
+}
+.hero-section__socials-link {
+  font-size: 1.25rem;
+  color: var(--text-color);
+  transition: color 0.4s;
+}
+.hero-section__socials-link:hover {
+  color: var(--first-color);
+}
+
+.hero-section__button {
+  justify-self: center;
+}
 /*=============== BUTTON ===============*/
+.button {
+  background: var(--gradient-color);
+  padding: 0.75rem 1.5rem;
+  border-radius: 4rem;
+  color: var(--white-color);
+  font-weight: var(--font-semi-bold);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 0.5rem;
+  transition: box-shadow 0.4s;
+}
+.button i {
+  font-size: 1.5rem;
+  font-weight: initial;
+  color: var(--first-color);
+}
 
+.button:hover {
+  box-shadow: 0 12px 32px hsla(23, 100%, 50%, 0.12);
+}
 /*=============== ABOUT ===============*/
 
 /*=============== FAVORITE ===============*/
